FIX: improved teams page list view on mobile

--- a/css/teammap.css
+++ b/css/teammap.css
@@ -32,12 +32,14 @@ body {
     color: var(--text-color);
     background-color: var(--bg-color);
     animation: fade-in 0.2s ease-in-out;
+    cursor: move;
 }
 
 @keyframes fade-in {
     from {
         opacity: 0;
     }
+
     to {
         opacity: 1;
     }
@@ -48,7 +50,7 @@ body {
     touch-action: none;
     cursor: move;
     -webkit-user-select: none;
-	user-select: none;
+    user-select: none;
 }
 
 .map-container img {
@@ -57,7 +59,7 @@ body {
     display: block;
     opacity: var(--map-opacity);
     -webkit-user-select: none;
-	user-select: none;
+    user-select: none;
 }
 
 .dot {
@@ -84,7 +86,7 @@ body {
     -webkit-backdrop-filter: blur(2px);
     backdrop-filter: blur(2px);
     -webkit-user-select: none;
-	user-select: none;
+    user-select: none;
 }
 
 .zoom-controls {
@@ -105,11 +107,13 @@ body {
     opacity: 0;
     animation: fadeIn 0.25s ease-in-out forwards;
     -webkit-user-select: none;
-	user-select: none;
+    user-select: none;
 }
 
 @keyframes fadeIn {
-    to { opacity: 1; }
+    to {
+        opacity: 1;
+    }
 }
 
 .controls-button {
