--- a/css/teamstandingsbox.css
+++ b/css/teamstandingsbox.css
@@ -42,6 +42,7 @@
     outline: 1px #bc0839 solid;
     background-color: var(--standings-box-bg-color);
     height: 50px;
+    align-items: center;
     border-radius: 10px;
     transition: background-color 0.2s ease, outline 0.2s ease, color 0.2s ease;
 }
@@ -74,6 +75,7 @@
     border-radius: 5px;
     margin-left: 2px;
     width: 12px;
+    height: 50px;
 }
  
 .teamStandingsBox .teamLogo {
@@ -209,46 +211,44 @@
         gap: clamp(0.25rem, 1.0vw, 5em);
         padding: 5px;
         border-radius: 5px;
-        height: clamp(0.75rem, 5.0vw, 5em);
+        height: clamp(0.75rem, 7.5vw, 5em);
     }
 
     .teamStandingsBox .teamPosition {
         border-radius: 2.5px;
-        font-size: clamp(0.5rem, 3.5vw, 5em);
-        height: clamp(1rem, 5.0vw, 5em);
-        width: clamp(1rem, 5.0vw, 5em);
+        font-size: clamp(0.5rem, 5.25vw, 5em);
+        height: clamp(1rem, 7.5vw, 5em);
+        width: clamp(1rem, 7.5vw, 5em);
     }
 
     .teamStandingsBox .teamColour {
-        border-radius: 5px;
         margin-left: 0;
-        width: clamp(0.25rem, 1.25vw, 5em);
+        width: clamp(0.25rem, 1.875vw, 5em);
+        height: clamp(1rem, 7.5vw, 5em);
     }
     
     .teamStandingsBox .teamLogo {
         margin-left: 0;
-        height: clamp(0.25rem, 5.0vw, 5em);
-        width: clamp(0.25rem, 5.0vw, 5em);
+        height: clamp(0.25rem, 7.5vw, 5em);
+        width: clamp(0.25rem, 7.5vw, 5em);
     }
 
     .teamStandingsBox .teamName {
         margin-left: 0;
-        font-size: clamp(0.25rem, 4.25vw, 5em);
+        font-size: clamp(0.25rem, 6.075vw, 5em);
     }
 
     .teamStandingsBox .teamPointsArea {
-        margin-left: auto;
         margin-right: 5px;
-        text-align: right;
         line-height: 0.8;
     }
 
     .teamStandingsBox .teamPointsArea .teamPoints {
-        font-size: clamp(0.5rem, 4.25vw, 5em);
+        font-size: clamp(0.5rem, 6vw, 5em);
     }
 
     .teamStandingsBox .teamPointsArea .teamStandings {
-        font-size: clamp(0.25rem, 2.0vw, 5em);
+        font-size: clamp(0.25rem, 3.0vw, 5em);
     }
 
     .teamBoxContainer {
